--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,116 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
 
-# next.js
+# Testing
+/coverage
+*.lcov
+.nyc_output
+
+# Next.js
 /.next/
 /out/
+.next
+out
 
-# production
+# Production
 /build
+/dist
 
-# debug
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+lerna-debug.log*
 
-# env files
-.env*
+# Environment Variables
+.env
+.env*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# vercel
+# Vercel
 .vercel
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
+*.tsbuildinfo.json
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# IDE - IntelliJ / WebStorm
+.idea/
+*.iml
+*.iws
+*.ipr
+.idea_modules/
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+# Temporary files
+*.tmp
+*.temp
+*.swp
+*.swo
+*~
+
+# Documentation (internal development notes - should not be in public repo)
+*_SUMMARY.md
+*_GUIDE.md
+*_FIXES.md
+*_PLAN.md
+*_IMPLEMENTATION.md
+*_TROUBLESHOOTING.md
+*_IMPROVEMENTS.md
+*_SYSTEM.md
+*_SETUP.md
+VERIFY_*.txt
+AUTH_FIXES_SUMMARY.md
+CLUB_CREATION_GUIDE.md
+CLUB_SPECIFIC_DASHBOARD.md
+CLUB_SPECIFIC_SYSTEM.md
+COMPLETE_SYSTEM_SUMMARY.md
+CRITICAL_FIXES.md
+DATABASE_SETUP.md
+EMAIL_SETUP.md
+IMPLEMENTATION_PLAN.md
+IMPLEMENTATION_SUMMARY.md
+LOGIN_TROUBLESHOOTING.md
+ML_ANALYTICS_IMPLEMENTATION.md
+PHASE_2_3_COMPLETE.md
+QUICK_START.md
+UI_UX_IMPROVEMENTS.md
+RUN_THIS_IN_SUPABASE.sql
+
+# Backup and old folders
+Final-Clunite/
+*-old/
+*-backup/
+*.bak
+
+# Lock files (keep only one)
+# Uncomment the lock file you DON'T use:
+# package-lock.json
+# pnpm-lock.yaml
+# yarn.lock
